[gd_scene load_steps=3 format=3 uid="uid://cp0y4pviekhge"]

[ext_resource type="Script" uid="uid://cfwvl6yccstdr" path="res://Scripts/UI/GameMenus/end_scene.gd" id="1_mbyqo"]
[ext_resource type="Texture2D" uid="uid://cwswpjgwhalic" path="res://Assets/Backgrounds/aesthetic-pixel-art-of-city-japanese-shrine.jpg" id="2_he1ek"]

[node name="EndScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mbyqo")

[node name="PageContainer" type="Control" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CurrentPage" type="Control" parent="PageContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImageRect" type="TextureRect" parent="PageContainer/CurrentPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_he1ek")
expand_mode = 3
stretch_mode = 5

[node name="DialogBox" type="Panel" parent="PageContainer/CurrentPage"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PageContainer/CurrentPage/DialogBox"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.113000005
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.049999237
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="PageContainer/CurrentPage/DialogBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 32
text = "This is an example text"
horizontal_alignment = 1

[node name="SkipButton" type="Button" parent="PageContainer/CurrentPage/DialogBox/VBoxContainer"]
layout_mode = 2
text = "Skip"

[node name="Background" type="ColorRect" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="FadeOverlay" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="FadeOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
